--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./pics/favicon.png">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="box">
+            <div class="header-image"></div>
+            <div class="box-content">
+                <h2>Hív a természet</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem suscipit sit in, neque ipsam illum, facilis ipsa commodi omnis explicabo rerum quaerat animi, eos nulla esse magni repellat cumque. Magnam reiciendis ut architecto cupiditate neque illo reprehenderit ex? Exercitationem velit ea vitae minus temporibus voluptatibus, odit cumque adipisci inventore quisquam voluptatem at harum quod provident, rerum ipsum, sit accusantium? Amet?</p>
+                <p class="details">
+                    <a href="#">Megnézem</a>
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
